# serializer version: 1
# name: test_plot_confidence_scatter_basic
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'data': dict({
      'name': 'data-normalized-0',
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'category': 'High',
          'value': 3.7,
        }),
        dict({
          'category': 'High',
          'value': 3.8,
        }),
        dict({
          'category': 'High',
          'value': 3.9,
        }),
        dict({
          'category': 'High',
          'value': 3.95,
        }),
        dict({
          'category': 'High',
          'value': 4.0,
        }),
        dict({
          'category': 'High',
          'value': 4.0,
        }),
        dict({
          'category': 'High',
          'value': 4.05,
        }),
        dict({
          'category': 'High',
          'value': 4.1,
        }),
        dict({
          'category': 'High',
          'value': 4.2,
        }),
        dict({
          'category': 'High',
          'value': 4.3,
        }),
        dict({
          'category': 'Low',
          'value': 0.7,
        }),
        dict({
          'category': 'Low',
          'value': 0.8,
        }),
        dict({
          'category': 'Low',
          'value': 0.9,
        }),
        dict({
          'category': 'Low',
          'value': 0.95,
        }),
        dict({
          'category': 'Low',
          'value': 1.0,
        }),
        dict({
          'category': 'Low',
          'value': 1.0,
        }),
        dict({
          'category': 'Low',
          'value': 1.05,
        }),
        dict({
          'category': 'Low',
          'value': 1.1,
        }),
        dict({
          'category': 'Low',
          'value': 1.2,
        }),
        dict({
          'category': 'Low',
          'value': 1.3,
        }),
        dict({
          'category': 'Medium',
          'value': 2.2,
        }),
        dict({
          'category': 'Medium',
          'value': 2.3,
        }),
        dict({
          'category': 'Medium',
          'value': 2.4,
        }),
        dict({
          'category': 'Medium',
          'value': 2.45,
        }),
        dict({
          'category': 'Medium',
          'value': 2.5,
        }),
        dict({
          'category': 'Medium',
          'value': 2.5,
        }),
        dict({
          'category': 'Medium',
          'value': 2.55,
        }),
        dict({
          'category': 'Medium',
          'value': 2.6,
        }),
        dict({
          'category': 'Medium',
          'value': 2.7,
        }),
        dict({
          'category': 'Medium',
          'value': 2.8,
        }),
      ]),
    }),
    'height': 400,
    'layer': list([
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'category',
            'title': 'category',
            'type': 'nominal',
          }),
          'y': dict({
            'field': 'value',
            'scale': dict({
              'type': 'linear',
              'zero': False,
            }),
            'title': 'value',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'extent': 'ci',
          'type': 'errorbar',
        }),
      }),
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'category',
            'type': 'nominal',
          }),
          'y': dict({
            'aggregate': 'mean',
            'field': 'value',
            'scale': dict({
              'type': 'linear',
              'zero': False,
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'type': 'point',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
# name: test_plot_confidence_scatter_custom_styling
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'data': dict({
      'name': 'data-normalized-0',
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'level': 'X',
          'score': 9.5,
        }),
        dict({
          'level': 'X',
          'score': 9.8,
        }),
        dict({
          'level': 'X',
          'score': 10.0,
        }),
        dict({
          'level': 'X',
          'score': 10.2,
        }),
        dict({
          'level': 'X',
          'score': 10.5,
        }),
        dict({
          'level': 'Y',
          'score': 19.5,
        }),
        dict({
          'level': 'Y',
          'score': 19.8,
        }),
        dict({
          'level': 'Y',
          'score': 20.0,
        }),
        dict({
          'level': 'Y',
          'score': 20.2,
        }),
        dict({
          'level': 'Y',
          'score': 20.5,
        }),
        dict({
          'level': 'Z',
          'score': 29.5,
        }),
        dict({
          'level': 'Z',
          'score': 29.8,
        }),
        dict({
          'level': 'Z',
          'score': 30.0,
        }),
        dict({
          'level': 'Z',
          'score': 30.2,
        }),
        dict({
          'level': 'Z',
          'score': 30.5,
        }),
      ]),
    }),
    'height': 500,
    'layer': list([
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'level',
            'title': 'Category',
            'type': 'nominal',
          }),
          'y': dict({
            'field': 'score',
            'scale': dict({
              'type': 'linear',
              'zero': False,
            }),
            'title': 'Measurement',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'red',
          'extent': 'ci',
          'type': 'errorbar',
        }),
      }),
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'level',
            'type': 'nominal',
          }),
          'y': dict({
            'aggregate': 'mean',
            'field': 'score',
            'scale': dict({
              'type': 'linear',
              'zero': False,
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'red',
          'filled': True,
          'type': 'point',
        }),
      }),
    ]),
    'width': 800,
  })
# ---
# name: test_plot_confidence_scatter_numeric_x_with_labels
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'data': dict({
      'name': 'data-normalized-0',
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'x': 1.0,
          'y': 0.7,
        }),
        dict({
          'x': 1.0,
          'y': 0.8,
        }),
        dict({
          'x': 1.0,
          'y': 0.9,
        }),
        dict({
          'x': 1.0,
          'y': 0.95,
        }),
        dict({
          'x': 1.0,
          'y': 1.0,
        }),
        dict({
          'x': 1.0,
          'y': 1.0,
        }),
        dict({
          'x': 1.0,
          'y': 1.05,
        }),
        dict({
          'x': 1.0,
          'y': 1.1,
        }),
        dict({
          'x': 1.0,
          'y': 1.2,
        }),
        dict({
          'x': 1.0,
          'y': 1.3,
        }),
        dict({
          'x': 2.0,
          'y': 2.2,
        }),
        dict({
          'x': 2.0,
          'y': 2.3,
        }),
        dict({
          'x': 2.0,
          'y': 2.4,
        }),
        dict({
          'x': 2.0,
          'y': 2.45,
        }),
        dict({
          'x': 2.0,
          'y': 2.5,
        }),
        dict({
          'x': 2.0,
          'y': 2.5,
        }),
        dict({
          'x': 2.0,
          'y': 2.55,
        }),
        dict({
          'x': 2.0,
          'y': 2.6,
        }),
        dict({
          'x': 2.0,
          'y': 2.7,
        }),
        dict({
          'x': 2.0,
          'y': 2.8,
        }),
        dict({
          'x': 3.0,
          'y': 3.7,
        }),
        dict({
          'x': 3.0,
          'y': 3.8,
        }),
        dict({
          'x': 3.0,
          'y': 3.9,
        }),
        dict({
          'x': 3.0,
          'y': 3.95,
        }),
        dict({
          'x': 3.0,
          'y': 4.0,
        }),
        dict({
          'x': 3.0,
          'y': 4.0,
        }),
        dict({
          'x': 3.0,
          'y': 4.05,
        }),
        dict({
          'x': 3.0,
          'y': 4.1,
        }),
        dict({
          'x': 3.0,
          'y': 4.2,
        }),
        dict({
          'x': 3.0,
          'y': 4.3,
        }),
      ]),
    }),
    'height': 400,
    'layer': list([
      dict({
        'encoding': dict({
          'x': dict({
            'axis': dict({
              'labelExpr': "datum.value === 1.0 ? 'Low' : datum.value === 2.0 ? 'Medium' : datum.value === 3.0 ? 'High' : datum.value",
              'values': list([
                1.0,
                2.0,
                3.0,
              ]),
            }),
            'field': 'x',
            'scale': dict({
              'type': 'linear',
              'zero': False,
            }),
            'title': 'x',
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'y',
            'scale': dict({
              'type': 'linear',
              'zero': False,
            }),
            'title': 'y',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'extent': 'ci',
          'type': 'errorbar',
        }),
      }),
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'scale': dict({
              'type': 'linear',
              'zero': False,
            }),
            'type': 'quantitative',
          }),
          'y': dict({
            'aggregate': 'mean',
            'field': 'y',
            'scale': dict({
              'type': 'linear',
              'zero': False,
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'type': 'point',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
# name: test_plot_confidence_scatter_stdev_extent
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'data': dict({
      'name': 'data-normalized-0',
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'x': 'A',
          'y': 0.8,
        }),
        dict({
          'x': 'A',
          'y': 0.9,
        }),
        dict({
          'x': 'A',
          'y': 0.9,
        }),
        dict({
          'x': 'A',
          'y': 0.95,
        }),
        dict({
          'x': 'A',
          'y': 1.0,
        }),
        dict({
          'x': 'A',
          'y': 1.0,
        }),
        dict({
          'x': 'A',
          'y': 1.05,
        }),
        dict({
          'x': 'A',
          'y': 1.1,
        }),
        dict({
          'x': 'A',
          'y': 1.1,
        }),
        dict({
          'x': 'A',
          'y': 1.2,
        }),
        dict({
          'x': 'B',
          'y': 1.8,
        }),
        dict({
          'x': 'B',
          'y': 1.9,
        }),
        dict({
          'x': 'B',
          'y': 1.9,
        }),
        dict({
          'x': 'B',
          'y': 1.95,
        }),
        dict({
          'x': 'B',
          'y': 2.0,
        }),
        dict({
          'x': 'B',
          'y': 2.0,
        }),
        dict({
          'x': 'B',
          'y': 2.05,
        }),
        dict({
          'x': 'B',
          'y': 2.1,
        }),
        dict({
          'x': 'B',
          'y': 2.1,
        }),
        dict({
          'x': 'B',
          'y': 2.2,
        }),
      ]),
    }),
    'height': 400,
    'layer': list([
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'title': 'x',
            'type': 'nominal',
          }),
          'y': dict({
            'field': 'y',
            'scale': dict({
              'type': 'linear',
              'zero': False,
            }),
            'title': 'y',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'extent': 'stdev',
          'type': 'errorbar',
        }),
      }),
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'type': 'nominal',
          }),
          'y': dict({
            'aggregate': 'mean',
            'field': 'y',
            'scale': dict({
              'type': 'linear',
              'zero': False,
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'type': 'point',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
# name: test_plot_confidence_scatter_with_identity_line
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'x': 'A',
          'y': 0.9,
        }),
        dict({
          'x': 'A',
          'y': 0.95,
        }),
        dict({
          'x': 'A',
          'y': 1.0,
        }),
        dict({
          'x': 'A',
          'y': 1.05,
        }),
        dict({
          'x': 'A',
          'y': 1.1,
        }),
        dict({
          'x': 'B',
          'y': 1.9,
        }),
        dict({
          'x': 'B',
          'y': 1.95,
        }),
        dict({
          'x': 'B',
          'y': 2.0,
        }),
        dict({
          'x': 'B',
          'y': 2.05,
        }),
        dict({
          'x': 'B',
          'y': 2.1,
        }),
        dict({
          'x': 'C',
          'y': 2.9,
        }),
        dict({
          'x': 'C',
          'y': 2.95,
        }),
        dict({
          'x': 'C',
          'y': 3.0,
        }),
        dict({
          'x': 'C',
          'y': 3.05,
        }),
        dict({
          'x': 'C',
          'y': 3.1,
        }),
      ]),
      'data-normalized-1': list([
        dict({
          'x': 0.9,
          'y': 0.9,
        }),
        dict({
          'x': 3.1,
          'y': 3.1,
        }),
      ]),
    }),
    'height': 400,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'scale': dict({
              'type': 'linear',
              'zero': False,
            }),
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'y',
            'scale': dict({
              'type': 'linear',
              'zero': False,
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'gray',
          'strokeDash': list([
            5,
            5,
          ]),
          'type': 'line',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'title': 'x',
            'type': 'nominal',
          }),
          'y': dict({
            'field': 'y',
            'scale': dict({
              'type': 'linear',
              'zero': False,
            }),
            'title': 'y',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'extent': 'ci',
          'type': 'errorbar',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'type': 'nominal',
          }),
          'y': dict({
            'aggregate': 'mean',
            'field': 'y',
            'scale': dict({
              'type': 'linear',
              'zero': False,
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'type': 'point',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
# name: test_plot_confidence_scatter_with_title
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'data': dict({
      'name': 'data-normalized-0',
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'group': 'A',
          'measurement': 0.8,
        }),
        dict({
          'group': 'A',
          'measurement': 1.0,
        }),
        dict({
          'group': 'A',
          'measurement': 1.2,
        }),
        dict({
          'group': 'B',
          'measurement': 1.8,
        }),
        dict({
          'group': 'B',
          'measurement': 2.0,
        }),
        dict({
          'group': 'B',
          'measurement': 2.2,
        }),
        dict({
          'group': 'C',
          'measurement': 2.8,
        }),
        dict({
          'group': 'C',
          'measurement': 3.0,
        }),
        dict({
          'group': 'C',
          'measurement': 3.2,
        }),
      ]),
    }),
    'height': 400,
    'layer': list([
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'group',
            'title': 'group',
            'type': 'nominal',
          }),
          'y': dict({
            'field': 'measurement',
            'scale': dict({
              'type': 'linear',
              'zero': False,
            }),
            'title': 'measurement',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'extent': 'ci',
          'type': 'errorbar',
        }),
      }),
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'group',
            'type': 'nominal',
          }),
          'y': dict({
            'aggregate': 'mean',
            'field': 'measurement',
            'scale': dict({
              'type': 'linear',
              'zero': False,
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'type': 'point',
        }),
      }),
    ]),
    'title': 'Custom Title Test',
    'width': 600,
  })
# ---
# name: test_plot_deviations_basic
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'category': 'High',
          'deviation': -0.2999999999999998,
          'value': 3.7,
        }),
        dict({
          'category': 'High',
          'deviation': -0.20000000000000018,
          'value': 3.8,
        }),
        dict({
          'category': 'High',
          'deviation': -0.10000000000000009,
          'value': 3.9,
        }),
        dict({
          'category': 'High',
          'deviation': -0.04999999999999982,
          'value': 3.95,
        }),
        dict({
          'category': 'High',
          'deviation': 0.0,
          'value': 4.0,
        }),
        dict({
          'category': 'High',
          'deviation': 0.0,
          'value': 4.0,
        }),
        dict({
          'category': 'High',
          'deviation': 0.04999999999999982,
          'value': 4.05,
        }),
        dict({
          'category': 'High',
          'deviation': 0.09999999999999964,
          'value': 4.1,
        }),
        dict({
          'category': 'High',
          'deviation': 0.20000000000000018,
          'value': 4.2,
        }),
        dict({
          'category': 'High',
          'deviation': 0.2999999999999998,
          'value': 4.3,
        }),
        dict({
          'category': 'Low',
          'deviation': -0.30000000000000004,
          'value': 0.7,
        }),
        dict({
          'category': 'Low',
          'deviation': -0.19999999999999996,
          'value': 0.8,
        }),
        dict({
          'category': 'Low',
          'deviation': -0.09999999999999998,
          'value': 0.9,
        }),
        dict({
          'category': 'Low',
          'deviation': -0.050000000000000044,
          'value': 0.95,
        }),
        dict({
          'category': 'Low',
          'deviation': 0.0,
          'value': 1.0,
        }),
        dict({
          'category': 'Low',
          'deviation': 0.0,
          'value': 1.0,
        }),
        dict({
          'category': 'Low',
          'deviation': 0.050000000000000044,
          'value': 1.05,
        }),
        dict({
          'category': 'Low',
          'deviation': 0.10000000000000009,
          'value': 1.1,
        }),
        dict({
          'category': 'Low',
          'deviation': 0.19999999999999996,
          'value': 1.2,
        }),
        dict({
          'category': 'Low',
          'deviation': 0.30000000000000004,
          'value': 1.3,
        }),
        dict({
          'category': 'Medium',
          'deviation': -0.2999999999999998,
          'value': 2.2,
        }),
        dict({
          'category': 'Medium',
          'deviation': -0.20000000000000018,
          'value': 2.3,
        }),
        dict({
          'category': 'Medium',
          'deviation': -0.10000000000000009,
          'value': 2.4,
        }),
        dict({
          'category': 'Medium',
          'deviation': -0.04999999999999982,
          'value': 2.45,
        }),
        dict({
          'category': 'Medium',
          'deviation': 0.0,
          'value': 2.5,
        }),
        dict({
          'category': 'Medium',
          'deviation': 0.0,
          'value': 2.5,
        }),
        dict({
          'category': 'Medium',
          'deviation': 0.04999999999999982,
          'value': 2.55,
        }),
        dict({
          'category': 'Medium',
          'deviation': 0.10000000000000009,
          'value': 2.6,
        }),
        dict({
          'category': 'Medium',
          'deviation': 0.20000000000000018,
          'value': 2.7,
        }),
        dict({
          'category': 'Medium',
          'deviation': 0.2999999999999998,
          'value': 2.8,
        }),
      ]),
      'data-normalized-1': list([
        dict({
          'y': 0.0,
        }),
      ]),
    }),
    'height': 400,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'category',
            'title': 'category',
            'type': 'nominal',
          }),
          'y': dict({
            'field': 'deviation',
            'title': 'deviation',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'type': 'point',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'y': dict({
            'field': 'y',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'red',
          'strokeDash': list([
            5,
            5,
          ]),
          'type': 'rule',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
# name: test_plot_deviations_numeric_x_with_labels
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'y': 0.0,
        }),
      ]),
      'data-normalized-1': list([
        dict({
          'deviation': -0.30000000000000004,
          'x': 1.0,
          'y': 0.7,
        }),
        dict({
          'deviation': -0.2999999999999998,
          'x': 2.0,
          'y': 2.2,
        }),
        dict({
          'deviation': -0.2999999999999998,
          'x': 3.0,
          'y': 3.7,
        }),
        dict({
          'deviation': -0.20000000000000018,
          'x': 2.0,
          'y': 2.3,
        }),
        dict({
          'deviation': -0.20000000000000018,
          'x': 3.0,
          'y': 3.8,
        }),
        dict({
          'deviation': -0.19999999999999996,
          'x': 1.0,
          'y': 0.8,
        }),
        dict({
          'deviation': -0.10000000000000009,
          'x': 2.0,
          'y': 2.4,
        }),
        dict({
          'deviation': -0.10000000000000009,
          'x': 3.0,
          'y': 3.9,
        }),
        dict({
          'deviation': -0.09999999999999998,
          'x': 1.0,
          'y': 0.9,
        }),
        dict({
          'deviation': -0.050000000000000044,
          'x': 1.0,
          'y': 0.95,
        }),
        dict({
          'deviation': -0.04999999999999982,
          'x': 2.0,
          'y': 2.45,
        }),
        dict({
          'deviation': -0.04999999999999982,
          'x': 3.0,
          'y': 3.95,
        }),
        dict({
          'deviation': 0.0,
          'x': 1.0,
          'y': 1.0,
        }),
        dict({
          'deviation': 0.0,
          'x': 1.0,
          'y': 1.0,
        }),
        dict({
          'deviation': 0.0,
          'x': 2.0,
          'y': 2.5,
        }),
        dict({
          'deviation': 0.0,
          'x': 2.0,
          'y': 2.5,
        }),
        dict({
          'deviation': 0.0,
          'x': 3.0,
          'y': 4.0,
        }),
        dict({
          'deviation': 0.0,
          'x': 3.0,
          'y': 4.0,
        }),
        dict({
          'deviation': 0.04999999999999982,
          'x': 2.0,
          'y': 2.55,
        }),
        dict({
          'deviation': 0.04999999999999982,
          'x': 3.0,
          'y': 4.05,
        }),
        dict({
          'deviation': 0.050000000000000044,
          'x': 1.0,
          'y': 1.05,
        }),
        dict({
          'deviation': 0.09999999999999964,
          'x': 3.0,
          'y': 4.1,
        }),
        dict({
          'deviation': 0.10000000000000009,
          'x': 1.0,
          'y': 1.1,
        }),
        dict({
          'deviation': 0.10000000000000009,
          'x': 2.0,
          'y': 2.6,
        }),
        dict({
          'deviation': 0.19999999999999996,
          'x': 1.0,
          'y': 1.2,
        }),
        dict({
          'deviation': 0.20000000000000018,
          'x': 2.0,
          'y': 2.7,
        }),
        dict({
          'deviation': 0.20000000000000018,
          'x': 3.0,
          'y': 4.2,
        }),
        dict({
          'deviation': 0.2999999999999998,
          'x': 2.0,
          'y': 2.8,
        }),
        dict({
          'deviation': 0.2999999999999998,
          'x': 3.0,
          'y': 4.3,
        }),
        dict({
          'deviation': 0.30000000000000004,
          'x': 1.0,
          'y': 1.3,
        }),
      ]),
    }),
    'height': 400,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'axis': dict({
              'labelExpr': "datum.value === 1.0 ? 'Low' : datum.value === 2.0 ? 'Medium' : datum.value === 3.0 ? 'High' : datum.value",
              'values': list([
                1.0,
                2.0,
                3.0,
              ]),
            }),
            'field': 'x',
            'scale': dict({
              'type': 'linear',
            }),
            'title': 'x',
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'deviation',
            'title': 'deviation',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'type': 'point',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'y': dict({
            'field': 'y',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'red',
          'strokeDash': list([
            5,
            5,
          ]),
          'type': 'rule',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
# name: test_plot_deviations_relative
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'y': 0.0,
        }),
      ]),
      'data-normalized-1': list([
        dict({
          'deviation': -0.09999999999999998,
          'x': 'A',
          'y': 0.9,
        }),
        dict({
          'deviation': -0.050000000000000044,
          'x': 'A',
          'y': 0.95,
        }),
        dict({
          'deviation': -0.050000000000000044,
          'x': 'B',
          'y': 1.9,
        }),
        dict({
          'deviation': -0.03333333333333336,
          'x': 'C',
          'y': 2.9,
        }),
        dict({
          'deviation': -0.025000000000000022,
          'x': 'B',
          'y': 1.95,
        }),
        dict({
          'deviation': -0.016666666666666607,
          'x': 'C',
          'y': 2.95,
        }),
        dict({
          'deviation': 0.0,
          'x': 'A',
          'y': 1.0,
        }),
        dict({
          'deviation': 0.0,
          'x': 'B',
          'y': 2.0,
        }),
        dict({
          'deviation': 0.0,
          'x': 'C',
          'y': 3.0,
        }),
        dict({
          'deviation': 0.016666666666666607,
          'x': 'C',
          'y': 3.05,
        }),
        dict({
          'deviation': 0.02499999999999991,
          'x': 'B',
          'y': 2.05,
        }),
        dict({
          'deviation': 0.03333333333333336,
          'x': 'C',
          'y': 3.1,
        }),
        dict({
          'deviation': 0.050000000000000044,
          'x': 'A',
          'y': 1.05,
        }),
        dict({
          'deviation': 0.050000000000000044,
          'x': 'B',
          'y': 2.1,
        }),
        dict({
          'deviation': 0.10000000000000009,
          'x': 'A',
          'y': 1.1,
        }),
      ]),
    }),
    'height': 400,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'title': 'x',
            'type': 'nominal',
          }),
          'y': dict({
            'field': 'deviation',
            'title': 'relative deviation',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'type': 'point',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'y': dict({
            'field': 'y',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'red',
          'strokeDash': list([
            5,
            5,
          ]),
          'type': 'rule',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
# name: test_plot_deviations_with_levels
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'deviation': -0.19999999999999996,
          'x': 'A',
          'y': 0.8,
        }),
        dict({
          'deviation': -0.19999999999999996,
          'x': 'B',
          'y': 1.8,
        }),
        dict({
          'deviation': -0.10000000000000009,
          'x': 'B',
          'y': 1.9,
        }),
        dict({
          'deviation': -0.10000000000000009,
          'x': 'B',
          'y': 1.9,
        }),
        dict({
          'deviation': -0.09999999999999998,
          'x': 'A',
          'y': 0.9,
        }),
        dict({
          'deviation': -0.09999999999999998,
          'x': 'A',
          'y': 0.9,
        }),
        dict({
          'deviation': -0.050000000000000044,
          'x': 'A',
          'y': 0.95,
        }),
        dict({
          'deviation': -0.050000000000000044,
          'x': 'B',
          'y': 1.95,
        }),
        dict({
          'deviation': 0.0,
          'x': 'A',
          'y': 1.0,
        }),
        dict({
          'deviation': 0.0,
          'x': 'A',
          'y': 1.0,
        }),
        dict({
          'deviation': 0.0,
          'x': 'B',
          'y': 2.0,
        }),
        dict({
          'deviation': 0.0,
          'x': 'B',
          'y': 2.0,
        }),
        dict({
          'deviation': 0.04999999999999982,
          'x': 'B',
          'y': 2.05,
        }),
        dict({
          'deviation': 0.050000000000000044,
          'x': 'A',
          'y': 1.05,
        }),
        dict({
          'deviation': 0.10000000000000009,
          'x': 'A',
          'y': 1.1,
        }),
        dict({
          'deviation': 0.10000000000000009,
          'x': 'A',
          'y': 1.1,
        }),
        dict({
          'deviation': 0.10000000000000009,
          'x': 'B',
          'y': 2.1,
        }),
        dict({
          'deviation': 0.10000000000000009,
          'x': 'B',
          'y': 2.1,
        }),
        dict({
          'deviation': 0.19999999999999996,
          'x': 'A',
          'y': 1.2,
        }),
        dict({
          'deviation': 0.20000000000000018,
          'x': 'B',
          'y': 2.2,
        }),
      ]),
      'data-normalized-1': list([
        dict({
          'y': 0.0,
        }),
      ]),
      'data-normalized-2': list([
        dict({
          'y': -0.2,
        }),
        dict({
          'y': -0.1,
        }),
        dict({
          'y': 0.1,
        }),
        dict({
          'y': 0.2,
        }),
      ]),
    }),
    'height': 400,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'title': 'x',
            'type': 'nominal',
          }),
          'y': dict({
            'field': 'deviation',
            'title': 'deviation',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'type': 'point',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'y': dict({
            'field': 'y',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'red',
          'strokeDash': list([
            5,
            5,
          ]),
          'type': 'rule',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-2',
        }),
        'encoding': dict({
          'y': dict({
            'field': 'y',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'black',
          'strokeDash': list([
            3,
            3,
          ]),
          'type': 'rule',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
# name: test_plot_deviations_with_title
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'y': 0.0,
        }),
      ]),
      'data-normalized-1': list([
        dict({
          'deviation': -0.20000000000000018,
          'group': 'C',
          'measurement': 2.8,
        }),
        dict({
          'deviation': -0.19999999999999996,
          'group': 'A',
          'measurement': 0.8,
        }),
        dict({
          'deviation': -0.19999999999999996,
          'group': 'B',
          'measurement': 1.8,
        }),
        dict({
          'deviation': 0.0,
          'group': 'A',
          'measurement': 1.0,
        }),
        dict({
          'deviation': 0.0,
          'group': 'B',
          'measurement': 2.0,
        }),
        dict({
          'deviation': 0.0,
          'group': 'C',
          'measurement': 3.0,
        }),
        dict({
          'deviation': 0.19999999999999996,
          'group': 'A',
          'measurement': 1.2,
        }),
        dict({
          'deviation': 0.20000000000000018,
          'group': 'B',
          'measurement': 2.2,
        }),
        dict({
          'deviation': 0.20000000000000018,
          'group': 'C',
          'measurement': 3.2,
        }),
      ]),
    }),
    'height': 400,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'group',
            'title': 'group',
            'type': 'nominal',
          }),
          'y': dict({
            'field': 'deviation',
            'title': 'deviation',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'type': 'point',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'y': dict({
            'field': 'y',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'red',
          'strokeDash': list([
            5,
            5,
          ]),
          'type': 'rule',
        }),
      }),
    ]),
    'title': 'Deviations Title Test',
    'width': 600,
  })
# ---
# name: test_plot_predictions_errors_basic
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'pred': 1.1,
          'true': 1.0,
        }),
        dict({
          'pred': 2.2,
          'true': 2.0,
        }),
        dict({
          'pred': 2.8,
          'true': 3.0,
        }),
        dict({
          'pred': 4.1,
          'true': 4.0,
        }),
        dict({
          'pred': 5.3,
          'true': 5.0,
        }),
        dict({
          'pred': 5.9,
          'true': 6.0,
        }),
        dict({
          'pred': 7.2,
          'true': 7.0,
        }),
        dict({
          'pred': 7.8,
          'true': 8.0,
        }),
        dict({
          'pred': 9.1,
          'true': 9.0,
        }),
        dict({
          'pred': 10.3,
          'true': 10.0,
        }),
      ]),
      'data-normalized-1': list([
        dict({
          'x': 0.814,
          'y': 0.814,
        }),
        dict({
          'x': 10.486,
          'y': 10.486,
        }),
      ]),
    }),
    'height': 600,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'scale': dict({
              'domain': list([
                0.814,
                10.486,
              ]),
            }),
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'y',
            'scale': dict({
              'domain': list([
                0.814,
                10.486,
              ]),
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'gray',
          'strokeDash': list([
            5,
            5,
          ]),
          'type': 'line',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'tooltip': list([
            dict({
              'field': 'true',
              'type': 'quantitative',
            }),
            dict({
              'field': 'pred',
              'type': 'quantitative',
            }),
          ]),
          'x': dict({
            'field': 'true',
            'scale': dict({
              'domain': list([
                0.814,
                10.486,
              ]),
            }),
            'title': 'true',
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'pred',
            'scale': dict({
              'domain': list([
                0.814,
                10.486,
              ]),
            }),
            'title': 'pred',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'opacity': 0.7,
          'size': 60,
          'type': 'point',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
# name: test_plot_predictions_errors_color_and_shape
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'model': 'A',
          'pred': 1.1,
          'split': 'train',
          'true': 1.0,
        }),
        dict({
          'model': 'A',
          'pred': 2.2,
          'split': 'test',
          'true': 2.0,
        }),
        dict({
          'model': 'A',
          'pred': 5.3,
          'split': 'train',
          'true': 5.0,
        }),
        dict({
          'model': 'A',
          'pred': 5.9,
          'split': 'test',
          'true': 6.0,
        }),
        dict({
          'model': 'B',
          'pred': 2.8,
          'split': 'train',
          'true': 3.0,
        }),
        dict({
          'model': 'B',
          'pred': 4.1,
          'split': 'test',
          'true': 4.0,
        }),
        dict({
          'model': 'B',
          'pred': 7.2,
          'split': 'train',
          'true': 7.0,
        }),
        dict({
          'model': 'B',
          'pred': 7.8,
          'split': 'test',
          'true': 8.0,
        }),
      ]),
      'data-normalized-1': list([
        dict({
          'x': 0.86,
          'y': 0.86,
        }),
        dict({
          'x': 8.14,
          'y': 8.14,
        }),
      ]),
    }),
    'height': 600,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'scale': dict({
              'domain': list([
                0.86,
                8.14,
              ]),
            }),
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'y',
            'scale': dict({
              'domain': list([
                0.86,
                8.14,
              ]),
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'gray',
          'strokeDash': list([
            5,
            5,
          ]),
          'type': 'line',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'color': dict({
            'field': 'model',
            'type': 'nominal',
          }),
          'shape': dict({
            'field': 'split',
            'type': 'nominal',
          }),
          'tooltip': list([
            dict({
              'field': 'true',
              'type': 'quantitative',
            }),
            dict({
              'field': 'pred',
              'type': 'quantitative',
            }),
            dict({
              'field': 'model',
              'type': 'nominal',
            }),
            dict({
              'field': 'split',
              'type': 'nominal',
            }),
          ]),
          'x': dict({
            'field': 'true',
            'scale': dict({
              'domain': list([
                0.86,
                8.14,
              ]),
            }),
            'title': 'true',
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'pred',
            'scale': dict({
              'domain': list([
                0.86,
                8.14,
              ]),
            }),
            'title': 'pred',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'filled': True,
          'opacity': 0.7,
          'size': 60,
          'type': 'point',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
# name: test_plot_predictions_errors_custom_columns
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'actual': 1.0,
          'forecast': 1.2,
        }),
        dict({
          'actual': 2.0,
          'forecast': 1.8,
        }),
        dict({
          'actual': 3.0,
          'forecast': 3.1,
        }),
        dict({
          'actual': 4.0,
          'forecast': 4.3,
        }),
        dict({
          'actual': 5.0,
          'forecast': 4.8,
        }),
      ]),
      'data-normalized-1': list([
        dict({
          'x': 0.92,
          'y': 0.92,
        }),
        dict({
          'x': 5.08,
          'y': 5.08,
        }),
      ]),
    }),
    'height': 600,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'scale': dict({
              'domain': list([
                0.92,
                5.08,
              ]),
            }),
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'y',
            'scale': dict({
              'domain': list([
                0.92,
                5.08,
              ]),
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'gray',
          'strokeDash': list([
            5,
            5,
          ]),
          'type': 'line',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'tooltip': list([
            dict({
              'field': 'actual',
              'type': 'quantitative',
            }),
            dict({
              'field': 'forecast',
              'type': 'quantitative',
            }),
          ]),
          'x': dict({
            'field': 'actual',
            'scale': dict({
              'domain': list([
                0.92,
                5.08,
              ]),
            }),
            'title': 'Actual Value',
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'forecast',
            'scale': dict({
              'domain': list([
                0.92,
                5.08,
              ]),
            }),
            'title': 'Forecast Value',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'opacity': 0.7,
          'size': 60,
          'type': 'point',
        }),
      }),
    ]),
    'title': 'Forecast Accuracy',
    'width': 600,
  })
# ---
# name: test_plot_predictions_errors_custom_styling
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'x': 0.918,
          'y': 0.918,
        }),
        dict({
          'x': 5.1819999999999995,
          'y': 5.1819999999999995,
        }),
      ]),
      'data-normalized-1': list([
        dict({
          'pred': 1.1,
          'true': 1.0,
        }),
        dict({
          'pred': 1.8,
          'true': 2.0,
        }),
        dict({
          'pred': 3.2,
          'true': 3.0,
        }),
        dict({
          'pred': 3.9,
          'true': 4.0,
        }),
        dict({
          'pred': 5.1,
          'true': 5.0,
        }),
      ]),
    }),
    'height': 800,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'scale': dict({
              'domain': list([
                0.918,
                5.1819999999999995,
              ]),
            }),
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'y',
            'scale': dict({
              'domain': list([
                0.918,
                5.1819999999999995,
              ]),
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'gray',
          'strokeDash': list([
            5,
            5,
          ]),
          'type': 'line',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'tooltip': list([
            dict({
              'field': 'true',
              'type': 'quantitative',
            }),
            dict({
              'field': 'pred',
              'type': 'quantitative',
            }),
          ]),
          'x': dict({
            'field': 'true',
            'scale': dict({
              'domain': list([
                0.918,
                5.1819999999999995,
              ]),
            }),
            'title': 'true',
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'pred',
            'scale': dict({
              'domain': list([
                0.918,
                5.1819999999999995,
              ]),
            }),
            'title': 'pred',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'red',
          'filled': True,
          'opacity': 0.5,
          'size': 100,
          'type': 'point',
        }),
      }),
    ]),
    'width': 800,
  })
# ---
# name: test_plot_predictions_errors_shared_scale
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'x': 0.8200000000000001,
          'y': 0.8200000000000001,
        }),
        dict({
          'x': 10.18,
          'y': 10.18,
        }),
      ]),
      'data-normalized-1': list([
        dict({
          'pred': 2.0,
          'true': 1.0,
        }),
        dict({
          'pred': 4.0,
          'true': 2.0,
        }),
        dict({
          'pred': 6.0,
          'true': 3.0,
        }),
        dict({
          'pred': 8.0,
          'true': 4.0,
        }),
        dict({
          'pred': 10.0,
          'true': 5.0,
        }),
      ]),
    }),
    'height': 600,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'scale': dict({
              'domain': list([
                0.8200000000000001,
                10.18,
              ]),
            }),
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'y',
            'scale': dict({
              'domain': list([
                0.8200000000000001,
                10.18,
              ]),
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'gray',
          'strokeDash': list([
            5,
            5,
          ]),
          'type': 'line',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'tooltip': list([
            dict({
              'field': 'true',
              'type': 'quantitative',
            }),
            dict({
              'field': 'pred',
              'type': 'quantitative',
            }),
          ]),
          'x': dict({
            'field': 'true',
            'scale': dict({
              'domain': list([
                0.8200000000000001,
                10.18,
              ]),
            }),
            'title': 'true',
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'pred',
            'scale': dict({
              'domain': list([
                0.8200000000000001,
                10.18,
              ]),
            }),
            'title': 'pred',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'opacity': 0.7,
          'size': 60,
          'type': 'point',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
# name: test_plot_predictions_errors_with_color
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'model': 'A',
          'pred': 1.1,
          'true': 1.0,
        }),
        dict({
          'model': 'A',
          'pred': 2.2,
          'true': 2.0,
        }),
        dict({
          'model': 'A',
          'pred': 2.8,
          'true': 3.0,
        }),
        dict({
          'model': 'B',
          'pred': 4.1,
          'true': 4.0,
        }),
        dict({
          'model': 'B',
          'pred': 5.3,
          'true': 5.0,
        }),
        dict({
          'model': 'B',
          'pred': 5.9,
          'true': 6.0,
        }),
      ]),
      'data-normalized-1': list([
        dict({
          'x': 0.9,
          'y': 0.9,
        }),
        dict({
          'x': 6.1,
          'y': 6.1,
        }),
      ]),
    }),
    'height': 600,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'scale': dict({
              'domain': list([
                0.9,
                6.1,
              ]),
            }),
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'y',
            'scale': dict({
              'domain': list([
                0.9,
                6.1,
              ]),
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'gray',
          'strokeDash': list([
            5,
            5,
          ]),
          'type': 'line',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'color': dict({
            'field': 'model',
            'type': 'nominal',
          }),
          'tooltip': list([
            dict({
              'field': 'true',
              'type': 'quantitative',
            }),
            dict({
              'field': 'pred',
              'type': 'quantitative',
            }),
            dict({
              'field': 'model',
              'type': 'nominal',
            }),
          ]),
          'x': dict({
            'field': 'true',
            'scale': dict({
              'domain': list([
                0.9,
                6.1,
              ]),
            }),
            'title': 'true',
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'pred',
            'scale': dict({
              'domain': list([
                0.9,
                6.1,
              ]),
            }),
            'title': 'pred',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'filled': True,
          'opacity': 0.7,
          'size': 60,
          'type': 'point',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
# name: test_plot_predictions_errors_with_shape
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'dataset': 'test',
          'pred': 4.1,
          'true': 4.0,
        }),
        dict({
          'dataset': 'test',
          'pred': 5.3,
          'true': 5.0,
        }),
        dict({
          'dataset': 'test',
          'pred': 5.9,
          'true': 6.0,
        }),
        dict({
          'dataset': 'train',
          'pred': 1.1,
          'true': 1.0,
        }),
        dict({
          'dataset': 'train',
          'pred': 2.2,
          'true': 2.0,
        }),
        dict({
          'dataset': 'train',
          'pred': 2.8,
          'true': 3.0,
        }),
      ]),
      'data-normalized-1': list([
        dict({
          'x': 0.9,
          'y': 0.9,
        }),
        dict({
          'x': 6.1,
          'y': 6.1,
        }),
      ]),
    }),
    'height': 600,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'scale': dict({
              'domain': list([
                0.9,
                6.1,
              ]),
            }),
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'y',
            'scale': dict({
              'domain': list([
                0.9,
                6.1,
              ]),
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'gray',
          'strokeDash': list([
            5,
            5,
          ]),
          'type': 'line',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'shape': dict({
            'field': 'dataset',
            'type': 'nominal',
          }),
          'tooltip': list([
            dict({
              'field': 'true',
              'type': 'quantitative',
            }),
            dict({
              'field': 'pred',
              'type': 'quantitative',
            }),
            dict({
              'field': 'dataset',
              'type': 'nominal',
            }),
          ]),
          'x': dict({
            'field': 'true',
            'scale': dict({
              'domain': list([
                0.9,
                6.1,
              ]),
            }),
            'title': 'true',
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'pred',
            'scale': dict({
              'domain': list([
                0.9,
                6.1,
              ]),
            }),
            'title': 'pred',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'opacity': 0.7,
          'size': 60,
          'type': 'point',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
